[package]
name = "sakiot_rouvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = [
    "builder",
	"voice",
    "client",
    "gateway",
	"cache",
    "http",
    "model",
    "utils",
    "rustls_backend",
	"unstable_discord_api"
]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
songbird = { version = "0.2.0", features = ["builtin-queue"] }
# sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-native-tls", "offline" ] }
serde_json = "1.0"
mysql_async = "0.27.1"
reqwest = "0.11"
regex = "1.5.4"
byteorder = "1.4.3"
tracing = "0.1"
tracing-subscriber = "0.2"
chrono = "0.4"
[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"


[profile.release]
# debug = true
incremental = true
[profile.bench]
# debug = true
